--- a/sgx_analysis.ipynb
+++ b/sgx_analysis.ipynb
@@ -1285,6 +1285,52 @@
    "source": [
     "pivoted_sgx.to_csv(\"Data/sgx_data.csv\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filter out usable fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'Company name Latin alphabet',\n",
+       "       'NACE Rev. 2, core code (4 digits)', 'Consolidation code', 'year',\n",
+       "       'Accounts receivable ', 'Accumulated depreciation - No breakdown ',\n",
+       "       'Accumulated depreciation on buildings ',\n",
+       "       'Accumulated depreciation on land ',\n",
+       "       'Accumulated depreciation on leased assets ',\n",
+       "       ...\n",
+       "       'Total other current liabilities ', 'Total other non-current assets ',\n",
+       "       'Total other non-current liabilities ', 'Total others current assets ',\n",
+       "       'Total shareholders' equity ', 'Trade creditors ',\n",
+       "       'Transportation equipment ', 'Treasury shares ',\n",
+       "       'Unusual & exceptional income (expenses) ', 'Work in progress '],\n",
+       "      dtype='object', length=150)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sgx = pd.read_csv(\"Data/sgx_data.csv\")\n",
+    "\n",
+    "useful_fields = ['Total shareholders\\' equity ', 'Total liabilities ', 'Total current assets ', 'Net Cash from Operating Activities ',\n",
+    "                 'Net Cash from Financing Activities ', 'Net Cash from Investing Activities ', 'Total current liabilities ',\n",
+    "                 'Depreciation, Depletion & Amortization ', 'EBITDA ', 'Total depreciation, amortization & depletion ',\n",
+    "                 'Net property, plant & equipment ', 'Total long-term interest-bearing debt ', 'Net debt ', 'Net Income/Starting Line ',\n",
+    "                 'Net profit ', 'Earnings before interest & tax (EBIT) ', 'Increase/Decrease in Long Term Borrowings ', 'Increase/Decrease in Short Term Borrowings ',\n",
+    "                 'Loans & Borrowings ', 'Total assets ', 'Income tax expense ', 'Intangible assets ']"
+   ]
   }
  ],
  "metadata": {
