--- a/sgx_analysis.ipynb
+++ b/sgx_analysis.ipynb
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1771,7 +1771,7 @@
        "[12100 rows x 150 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1783,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1799,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1836,53 +1836,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "1707381.92254305 2226652.19590068\n",
-      "2953940.13923407 3901527.19026804\n",
-      "2004983.84061456 2816097.7358669\n",
-      "2226293.066293 3382662.77879477\n",
-      "2791751.73044205 3940630.08055091\n",
-      "4695850.99594295 6076445.56313753\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "n.a. n.a.\n",
-      "116131.083726883 n.a.\n",
-      "555644.904732704 n.a.\n",
-      "2599761.98750734 n.a.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(30):\n",
-    "    np = sgx.loc[i, 'NP']\n",
-    "    ni = sgx.loc[i, 'NI']\n",
-    "\n",
-    "    print(np, ni)\n",
-    "# I think NP is the final result of net income (profit), since it's always smaller"
+    "sgx.to_csv(\"Data/filteredSGX.csv\")"
    ]
   },
   {
