Commit final pooledols model

--- a/sgx_pooled_ols.ipynb
+++ b/sgx_pooled_ols.ipynb
@@ -25,6 +25,7 @@
     "\n",
     "import statsmodels.api as sm\n",
     "from linearmodels.panel import PooledOLS\n",
+    "from statsmodels.iolib import save_pickle\n",
     "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
@@ -1230,6 +1231,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The magnitude of the t-Statistics of LIQUID and SOLV reduced significantly, although not enough to change the significance levels of their coefficients in the model. There might be presence of some heteroskedasticty in the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### HAC Estimator"
    ]
   },
@@ -1300,12 +1308,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cross-sectional and Time Panel Robust Model"
+    "Similar to the White Robust model, the significance of the model parameters are unchanged when using HAC robust estimates. The t-Statistic of LIQUID reduced significantly, but does not affect the p-value estimates visibly whilst MCAP's t-Statistic is much more inflated but also has an unaffected p-value. There may be presence of autocorrelation in this Pooled OLS model but not enough to warrant the disuse of the non-robust model. The F-Statistic of the HAC robust model also balloons, but considering the significance of the non-robust model already, there is again no tangible impact on the relevance of either models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cluster Robust Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Whiten for correlation between entity clusters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1318,13 +1340,13 @@
       "Estimator:                  PooledOLS   R-squared (Between):              0.4292\n",
       "No. Observations:                1728   R-squared (Within):               0.0550\n",
       "Date:                Fri, Mar 29 2024   R-squared (Overall):              0.3621\n",
-      "Time:                        18:25:58   Log-likelihood                    282.02\n",
+      "Time:                        22:52:11   Log-likelihood                    282.02\n",
       "Cov. Estimator:             Clustered                                           \n",
       "                                        F-statistic:                      162.81\n",
       "Entities:                         216   P-value                           0.0000\n",
       "Avg Obs:                       8.0000   Distribution:                  F(6,1721)\n",
       "Min Obs:                       8.0000                                           \n",
-      "Max Obs:                       8.0000   F-statistic (robust):             113.38\n",
+      "Max Obs:                       8.0000   F-statistic (robust):             44.533\n",
       "                                        P-value                           0.0000\n",
       "Time periods:                       8   Distribution:                  F(6,1721)\n",
       "Avg Obs:                       216.00                                           \n",
@@ -1335,13 +1357,13 @@
       "=================================================================================\n",
       "               Parameter  Std. Err.     T-stat    P-value    Lower CI    Upper CI\n",
       "---------------------------------------------------------------------------------\n",
-      "const            -0.5964     0.0633    -9.4285     0.0000     -0.7205     -0.4724\n",
-      "SIZE              0.0422     0.0030     14.184     0.0000      0.0363      0.0480\n",
-      "PROFITABILITY    -0.4442     0.0787    -5.6421     0.0000     -0.5986     -0.2898\n",
-      "TANG              0.1932     0.0227     8.4966     0.0000      0.1486      0.2378\n",
-      "LIQUID           -0.0545     0.0057    -9.5449     0.0000     -0.0657     -0.0433\n",
-      "MCAP          -8.842e-12  1.672e-12    -5.2879     0.0000  -1.212e-11  -5.562e-12\n",
-      "SOLV             -0.0007     0.0001    -6.5766     0.0000     -0.0009     -0.0005\n",
+      "const            -0.5964     0.1401    -4.2578     0.0000     -0.8712     -0.3217\n",
+      "SIZE              0.0422     0.0068     6.1808     0.0000      0.0288      0.0555\n",
+      "PROFITABILITY    -0.4442     0.1056    -4.2075     0.0000     -0.6512     -0.2371\n",
+      "TANG              0.1932     0.0519     3.7260     0.0002      0.0915      0.2949\n",
+      "LIQUID           -0.0545     0.0076    -7.1356     0.0000     -0.0695     -0.0395\n",
+      "MCAP          -8.842e-12   4.09e-12    -2.1619     0.0308  -1.686e-11  -8.203e-13\n",
+      "SOLV             -0.0007     0.0001    -5.0197     0.0000     -0.0009     -0.0004\n",
       "=================================================================================\n"
      ]
     }
@@ -1361,9 +1383,163 @@
     "pooled_mod = PooledOLS(dependent = endo,\n",
     "                       exog = exog)\n",
     "\n",
-    "pooled_res = pooled_mod.fit(cov_type = 'clustered')\n",
+    "pooled_res = pooled_mod.fit(cov_type = 'clustered', cluster_entity= True)\n",
     "\n",
     "print(pooled_res.summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The F-Statistic of the model falls greatly to 44.533 after applying cluster robust estimates across the Company clusters. We can observe this as a result of the increase in the standard error of MCAP, resulting in an increase of the p-value (0.0308) which still remains significant at 5%. This is the most visible impact on the model parameters, but across the board, coefficient standard errors doubled or more. Most likely, there exists a significant correlation within entity clusters, which is to be expected as Firm's are likely to have an internal preference or targets of leverage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Whiten for correlation between time clusters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          PooledOLS Estimation Summary                          \n",
+      "================================================================================\n",
+      "Dep. Variable:               LEVERAGE   R-squared:                        0.3621\n",
+      "Estimator:                  PooledOLS   R-squared (Between):              0.4292\n",
+      "No. Observations:                1728   R-squared (Within):               0.0550\n",
+      "Date:                Fri, Mar 29 2024   R-squared (Overall):              0.3621\n",
+      "Time:                        22:55:03   Log-likelihood                    282.02\n",
+      "Cov. Estimator:             Clustered                                           \n",
+      "                                        F-statistic:                      162.81\n",
+      "Entities:                         216   P-value                           0.0000\n",
+      "Avg Obs:                       8.0000   Distribution:                  F(6,1721)\n",
+      "Min Obs:                       8.0000                                           \n",
+      "Max Obs:                       8.0000   F-statistic (robust):          2.969e+05\n",
+      "                                        P-value                           0.0000\n",
+      "Time periods:                       8   Distribution:                  F(6,1721)\n",
+      "Avg Obs:                       216.00                                           \n",
+      "Min Obs:                       216.00                                           \n",
+      "Max Obs:                       216.00                                           \n",
+      "                                                                                \n",
+      "                               Parameter Estimates                               \n",
+      "=================================================================================\n",
+      "               Parameter  Std. Err.     T-stat    P-value    Lower CI    Upper CI\n",
+      "---------------------------------------------------------------------------------\n",
+      "const            -0.5964     0.0453    -13.167     0.0000     -0.6853     -0.5076\n",
+      "SIZE              0.0422     0.0023     18.435     0.0000      0.0377      0.0466\n",
+      "PROFITABILITY    -0.4442     0.0611    -7.2678     0.0000     -0.5640     -0.3243\n",
+      "TANG              0.1932     0.0212     9.1344     0.0000      0.1517      0.2347\n",
+      "LIQUID           -0.0545     0.0046    -11.949     0.0000     -0.0635     -0.0456\n",
+      "MCAP          -8.842e-12  2.833e-13    -31.214     0.0000  -9.397e-12  -8.286e-12\n",
+      "SOLV             -0.0007  6.915e-05    -9.8734     0.0000     -0.0008     -0.0005\n",
+      "=================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "endo_var = 'LEVERAGE'\n",
+    "exog_vars = ['SIZE',\n",
+    "             'PROFITABILITY',\n",
+    "             'TANG',\n",
+    "             'LIQUID',\n",
+    "             'MCAP',\n",
+    "             'SOLV']\n",
+    "\n",
+    "endo = sgx[endo_var]\n",
+    "exog = sm.add_constant(sgx[exog_vars])\n",
+    "\n",
+    "pooled_mod = PooledOLS(dependent = endo,\n",
+    "                       exog = exog)\n",
+    "\n",
+    "pooled_res = pooled_mod.fit(cov_type = 'clustered', cluster_time= True)\n",
+    "\n",
+    "print(pooled_res.summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The reverse occurs here and standard errors remained consistent generally, even decreasing significantly for MCAP. It may have increased for LIQUID, but neither were sufficient to change our understanding of their significance to the model. This might be indicative that companies on the SGX are resistant to economic driven effects when deciding their leverage ratios."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          PooledOLS Estimation Summary                          \n",
+      "================================================================================\n",
+      "Dep. Variable:               LEVERAGE   R-squared:                        0.3621\n",
+      "Estimator:                  PooledOLS   R-squared (Between):              0.4292\n",
+      "No. Observations:                1728   R-squared (Within):               0.0550\n",
+      "Date:                Fri, Mar 29 2024   R-squared (Overall):              0.3621\n",
+      "Time:                        22:57:59   Log-likelihood                    282.02\n",
+      "Cov. Estimator:             Clustered                                           \n",
+      "                                        F-statistic:                      162.81\n",
+      "Entities:                         216   P-value                           0.0000\n",
+      "Avg Obs:                       8.0000   Distribution:                  F(6,1721)\n",
+      "Min Obs:                       8.0000                                           \n",
+      "Max Obs:                       8.0000   F-statistic (robust):             52.577\n",
+      "                                        P-value                           0.0000\n",
+      "Time periods:                       8   Distribution:                  F(6,1721)\n",
+      "Avg Obs:                       216.00                                           \n",
+      "Min Obs:                       216.00                                           \n",
+      "Max Obs:                       216.00                                           \n",
+      "                                                                                \n",
+      "                               Parameter Estimates                               \n",
+      "=================================================================================\n",
+      "               Parameter  Std. Err.     T-stat    P-value    Lower CI    Upper CI\n",
+      "---------------------------------------------------------------------------------\n",
+      "const            -0.5964     0.1329    -4.4866     0.0000     -0.8572     -0.3357\n",
+      "SIZE              0.0422     0.0066     6.4351     0.0000      0.0293      0.0550\n",
+      "PROFITABILITY    -0.4442     0.0932    -4.7670     0.0000     -0.6269     -0.2614\n",
+      "TANG              0.1932     0.0512     3.7753     0.0002      0.0928      0.2936\n",
+      "LIQUID           -0.0545     0.0068    -7.9892     0.0000     -0.0679     -0.0411\n",
+      "MCAP          -8.842e-12  3.743e-12    -2.3622     0.0183  -1.618e-11    -1.5e-12\n",
+      "SOLV             -0.0007     0.0001    -6.1057     0.0000     -0.0009     -0.0005\n",
+      "=================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "endo_var = 'LEVERAGE'\n",
+    "exog_vars = ['SIZE',\n",
+    "             'PROFITABILITY',\n",
+    "             'TANG',\n",
+    "             'LIQUID',\n",
+    "             'MCAP',\n",
+    "             'SOLV']\n",
+    "\n",
+    "endo = sgx[endo_var]\n",
+    "exog = sm.add_constant(sgx[exog_vars])\n",
+    "\n",
+    "pooled_mod = PooledOLS(dependent = endo,\n",
+    "                       exog = exog)\n",
+    "\n",
+    "pooled_res = pooled_mod.fit(cov_type = 'clustered', cluster_entity= True, cluster_time= True)\n",
+    "\n",
+    "print(pooled_res.summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When clustering for both time and company panels, we can observe the effects of each clusterings independently. It is evident that the non-effects of the time clusterings are reducing the impact of the entity clustering on the overall model."
    ]
   },
   {
@@ -1406,6 +1582,45 @@
     "sns.heatmap(corr_matrix, annot= True, cmap= 'coolwarm', fmt= \".2f\", linewidths= 0.5)\n",
     "plt.title('Coefficient Correlation Matrix Heatmap of Final Model')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Producing final model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "endo_var = 'LEVERAGE'\n",
+    "exog_vars = ['SIZE',\n",
+    "             'PROFITABILITY',\n",
+    "             'TANG',\n",
+    "             'LIQUID',\n",
+    "             'MCAP',\n",
+    "             'SOLV']\n",
+    "\n",
+    "endo = sgx[endo_var]\n",
+    "exog = sm.add_constant(sgx[exog_vars])\n",
+    "\n",
+    "final_mod = PooledOLS(dependent = endo,\n",
+    "                       exog = exog)\n",
+    "\n",
+    "final_res = pooled_mod.fit(cov_type = 'clustered', cluster_entity= True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_pickle(obj= final_res, fname= \"model/entity_clus_pooled_ols.pickle\")"
    ]
   }
  ],
