Commit data cleaning 1.5

--- a/sgx_data_cleaning.ipynb
+++ b/sgx_data_cleaning.ipynb
@@ -5353,6 +5353,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encode Companies with a unique numeric identifier\n",
+    "\n",
+    "sgx['Company Code'] = sgx['Company'].factorize()[0]\n",
+    "sgx['Company Code']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [
